--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "82add180a7a72e4c832bb907215f473163255789"}
+sycamore = { path = "sycamore/packages/sycamore" }
+log = "0.4.14"
+console_log = "0.2.0"
+wasm-bindgen = "0.2.78"
 
 [dependencies.web-sys]
-features = ["InputEvent", "KeyboardEvent"]
+features = ["InputEvent", "KeyboardEvent", "Window"]
 version = "0.3.55"
