--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 sycamore = { path = "sycamore/packages/sycamore" }
+fixie = { path = "../fixie" }
 log = "0.4.14"
 console_log = "0.2.0"
 wasm-bindgen = "0.2.78"
